# SO2-projekt

./: CMakeLists.txt
src/: clock.cpp  clock.h  doe.cpp  doe.h  fridge.cpp  fridge.h  garfield.cpp  garfield.h  main.cpp  producer.cpp  producer.h  window.cpp  window.h
